Fix controls on mobile

--- a/source/_scss/partials/_controls.scss
+++ b/source/_scss/partials/_controls.scss
@@ -91,8 +91,11 @@
     svg {
         height: 1em;
         width: 1em;
-        margin-right: .2em;
         margin-bottom: -.1em;
+
+        @include mq(tablet) {
+            margin-right: .2em;
+        }
 
         path {
             fill: $c-white;
@@ -133,6 +136,12 @@
         overflow: hidden;
         text-overflow: ellipsis;
         margin-right: 380px;
+    }
+}
+
+.controls__tablet-label {
+    @include mq($until: tablet) {
+        display: none;
     }
 }
 
